--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
+# Generated files
+bin/
+gen/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Android Studio project files
 *.iml
 .gradle
-/local.properties
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.idea/
+.idea
+build
