--- a/rotatepiechart/src/main/AndroidManifest.xml
+++ b/rotatepiechart/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="com.tt.rotate_piechart"
+<manifest package="com.tt.rotatepiechart"
           xmlns:android="http://schemas.android.com/apk/res/android"/>
